--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -51,31 +51,25 @@
                 android:layout_marginTop="@dimen/margin_normal"
                 android:hint="@string/login_password_hint"
                 android:inputType="textPassword" />
+
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_register"
+                style="@style/ButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:text="@string/register" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/txt_login"
+                style="@style/TextStyleWhite.Small"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="@dimen/margin_large"
+                android:text="@string/existing_user"/>
         </LinearLayout>
     </ScrollView>
-
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/btn_register"
-        style="@style/ButtonStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_normal"
-        android:text="@string/register"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView" />
-
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/txt_login"
-        style="@style/TextStyleWhite.Small"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="@dimen/margin_large"
-        android:text="@string/existing_user"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_register" />
 
     <include
         layout="@layout/layout_progress_bar"
